Plug-in help updated

--- a/trunk/plugins/org.ow2.chameleon.eclipse.ipojo.nature/html/credits.html
+++ b/trunk/plugins/org.ow2.chameleon.eclipse.ipojo.nature/html/credits.html
@@ -9,13 +9,12 @@
 <body>
 	<h1>Credits</h1>
 	<ul>
+		<li>Stéphane Chomat - for sharing his experience with Eclipse
+			plug-ins</li>
+		<li>Clément Escoffier - creator of iPOJO</li>
 		<li>Olivier Gattaz - <a href="http://www.isandlatech.com">isandlaTech,
-				France</a>, tester</li>
-		<li>Stéphane Chomat - <a href="http://www-adele.imag.fr/">Adele
-				Team/LIG/Grenoble University, France</a>, for his base of
-			EclipsePojoization class in the project <a
-			href="http://cadse.imag.fr/">CADSE</a>
-		</li>
+				France</a>, main tester</li>
+		<li>Guillaume Sauthier - for his work on iPOJO</li>
 	</ul>
 </body>
 </html>
