Added isandlaTech branding in credits

--- a/trunk/plugins/org.ow2.chameleon.eclipse.ipojo.nature/html/credits.html
+++ b/trunk/plugins/org.ow2.chameleon.eclipse.ipojo.nature/html/credits.html
@@ -8,13 +8,20 @@
 </head>
 <body>
 	<h1>Credits</h1>
+	<h2>Individuals</h2>
 	<ul>
 		<li>Stéphane Chomat - for sharing his experience with Eclipse
 			plug-ins</li>
 		<li>Clément Escoffier - creator of iPOJO</li>
 		<li>Olivier Gattaz - <a href="http://www.isandlatech.com">isandlaTech,
-				France</a>, main tester</li>
+				France</a>, main tester
+		</li>
 		<li>Guillaume Sauthier - for his work on iPOJO</li>
+	</ul>
+	<h2>Company</h2>
+	<ul>
+		<li><img src="./images/isandlatech.png" alt="isandlaTech logo" style="vertical-align: top;" /><br />
+			<a href="mailto:contact@isandlatech.com">Contact</a></li>
 	</ul>
 </body>
 </html>
