--- a/trunk/plugins/org.ow2.chameleon.eclipse.ipojo.nature/html/overview.html
+++ b/trunk/plugins/org.ow2.chameleon.eclipse.ipojo.nature/html/overview.html
@@ -12,14 +12,15 @@
 		iPOJO Nature is an Eclipse plug-in from <a
 			href="http://wiki.chameleon.ow2.org/xwiki/bin/view/Main/WebHome">
 			OW2 Chameleon project</a> providing a project nature and a builder for
-		Java and PDE projects. It is based on the iPOJO manipulator, so it is
-		compatible with metadata.xml and Java annotations component
-		descriptions.
+		Java and PDE projects. It is based on the <a
+			href="http://felix.apache.org/site/apache-felix-ipojo.html">iPOJO</a>
+		manipulator, so it is compatible with metadata.xml and Java
+		annotations component descriptions.
 	</p>
 	<p>It automates the manipulation of class files by iPOJO after
-		their compilation by the Java plug-in. This way, the developer can
-		use an OSGi Run/Debug Configuration without using an external tool nor
-		a Maven plug-in to run or test an iPOJO components.</p>
+		their compilation by the Java plug-in. This way, the developer can use
+		an OSGi Run/Debug Configuration without using an external tool nor a
+		Maven plug-in to run or test an iPOJO components.</p>
 
 	<h2>Usage</h2>
 	<ul>
